3.0/html/_sources/docs/reference/version_compatibility.rst.txt
.. _version-compatibility:

IP and Tool Version Compatibility
=================================

This page provides information on the compatibility between tools, IP, and Vitis |trade| AI release versions. Ensure that you are using aligned versions of all components.

Current Release
---------------

Vitis AI v3.0 and the DPU IP released with the v3.0 branch of this repository are verified as compatible with Vitis, Vivado |trade|, and PetaLinux version 2022.2. If you are using a previous release of Vitis AI, please refer to the table below release.


Previous Releases
-----------------



.. list-table::
   :widths: 40 30 30
   :header-rows: 1

   * - Software Tools Version
     - DPUCZDX8G IP Version
     - Vitis AI Release Version

   * - Vivado / Vitis / PetaLinux 2022.2
     - 4.1
     - v3.0

   * - Vivado / Vitis / PetaLinux 2022.1
     - 4.0
     - v2.5

   * - Vivado / Vitis / PetaLinux 2021.2
     - 3.4
     - v2.0

   * - Vivado / Vitis / PetaLinux 2021.1
     - 3.3
     - v1.4

   * - Vivado / Vitis / PetaLinux 2020.2
     - 3.3
     - v1.3

   * - Vivado / Vitis / PetaLinux 2020.1
     - 3.2
     - v1.2

   * - Vivado / Vitis / PetaLinux 2019.2
     - 3.2
     - v1.1

   * - Vivado / Vitis / PetaLinux 2019.1
     - 3.1
     - v1.0

   * - Vivado / PetaLinux 2019.1
     - 3.0
     - N/A

   * - Vivado / PetaLinux 2018.2
     - 2.0
     - N/A 

   * - Vivado / PetaLinux 2018.1
     - 1.0
     - First Release


.. list-table::
   :widths: 40 30 30
   :header-rows: 1

   * - Software Tools Version
     - DPUCVDX8G IP Version
     - Vitis AI Release Version

   * - Vitis / PetaLinux 2022.2
     - 1.3
     - v3.0

   * - Vitis / PetaLinux 2022.1
     - 1.2
     - v2.5

   * - Vitis / PetaLinux 2021.2
     - 1.1
     - v2.0

   * - Vitis / PetaLinux 2021.1
     - 1.0
     - v1.4

   * - Vitis / PetaLinux 2020.2
     - Early Access
     - v1.3

.. list-table::
   :widths: 40 30 30
   :header-rows: 1

   * - Software Tools Version
     - DPUCV2DX8G IP Version
     - Vitis AI Release Version

   * - Vitis / PetaLinux 2022.2
     - Early Access
     - v3.0

.. |trade|  unicode:: U+02122 .. TRADEMARK SIGN
   :ltrim:
.. |reg|    unicode:: U+02122 .. TRADEMARK SIGN
   :ltrim: